fix bug relate to course components not showing

--- a/Brutus/public/stylesheets/general.css
+++ b/Brutus/public/stylesheets/general.css
@@ -23,6 +23,10 @@ body {
 
 /* make nav bar bigger */
 
+.navbar-nav {
+    z-index: 10000;
+}
+
 .navbar-brand,
 .navbar-nav li a {
     line-height: 80px;
